overlays/prod/wordpress-headers.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secured
spec:
  chain:
    middlewares:
    - name: prod-wp-headers
    - name: prod-redirect-rss
