overlays/prod/wordpress-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`www.n0secure.org`)
    kind: Rule
    services:
    - name: prod-wordpress
      port: 80
    middlewares:
      - name: prod-wp-headers
